--- a/app/index.html
+++ b/app/index.html
@@ -48,6 +48,7 @@
   <!-- In production use:
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
   -->
+  <script src="bower_components/jquery/dist/jquery.js"></script>
   <script src="bower_components/materialize/dist/js/materialize.js"></script>
   <script src="bower_components/angular/angular.js"></script>
   <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
@@ -57,8 +58,10 @@
   <script src="view2/view2.js"></script>
   <script src="view2/view2.js"></script>
   <script src="players/players.controller.js"></script>
+  <script src="military/military.controller.js"></script>
   <script src="components/version/version.js"></script>
   <script src="components/version/version-directive.js"></script>
   <script src="components/version/interpolate-filter.js"></script>
+  <script src="components/player-table/player-table.directive.js"></script>
 </body>
 </html>
