--- a/app/index.html
+++ b/app/index.html
@@ -11,11 +11,12 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/normalize.css">
-  <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/main.css">
-  <link rel="stylesheet" href="bower_components/materialize/dist/css/materialize.css">
+  <!-- <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/normalize.css"> -->
+  <!-- <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/main.css"> -->
+  <!-- <link rel="stylesheet" href="bower_components/materialize/dist/css/materialize.css"> -->
+  <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.css">
   <link rel="stylesheet" href="app.css">
-  <script src="bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
+  <!-- <script src="bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script> -->
 </head>
 <body>
   <ul class="menu">
@@ -37,6 +38,11 @@
       </ul>
     </div>
   </div>
+  <md-nav-bar md-selected-nav-item="currentNavItem">
+  <md-nav-item md-nav-click="goto('page1')" ui-sref="players" name="page1">Players</a></md-nav-item>
+  <md-nav-item md-nav-click="goto('page1')" ui-sref="military" name="page1">Military</a></md-nav-item>
+
+</md-nav-bar>
   <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
   <![endif]-->
@@ -49,8 +55,17 @@
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
   -->
   <script src="bower_components/jquery/dist/jquery.js"></script>
-  <script src="bower_components/materialize/dist/js/materialize.js"></script>
+  <!-- <script src="bower_components/materialize/dist/js/materialize.js"></script> -->
   <script src="bower_components/angular/angular.js"></script>
+  <!-- Angular Material requires Angular.js Libraries -->
+  <!-- <scrip src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular.min.js"></script> -->
+  <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-animate.min.js"></script>
+  <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-aria.min.js"></script>
+  <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-messages.min.js"></script>
+
+  <!-- Angular Material Library -->
+  <script src="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.js"></script>
+
   <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
   <script src="app.js"></script>
   <script src="services/game.service.js"></script>
