fix placeholder select wonder

--- a/app/players/players.html
+++ b/app/players/players.html
@@ -18,8 +18,8 @@
 	    	</div>
 	    	
 	    	<div layout="row" >
-			  <md-select ng-model="newPlayer.wonder" flex="33">
-			    <md-option ng-value="wonder" ng-repeat="wonder in wonders">{{ wonder.city }}
+			  <md-select placeholder="Select a Wonder" ng-model="newPlayer.wonder" flex="33">
+			    <md-option  ng-value="wonder" ng-repeat="wonder in wonders">{{ wonder.city }}
 			    </md-option>
 			  </md-select>
 			</div>
