add remove player functionality

--- a/app/players/players.html
+++ b/app/players/players.html
@@ -7,7 +7,7 @@
 	   		</div> 
 			<div class="row">
 				 <i class="col s2 medium material-icons right" ng-click="addPlayer()">perm_identity</i>
-				 <i class="col s2 medium material-icons right">perm_identity</i>
+				 <i ng-click="edit()" class="col s2 medium material-icons right">---</i>
 			</div>
 	    </md-card>
 		  <!-- Modal Structure -->
