--- a/app/military/military.html
+++ b/app/military/military.html
@@ -5,7 +5,7 @@
 			<player-columns>
 				<player-column title="Player" type="text"></player-column>
 				<!-- <player-column title="Wonder" type="points"></player-column> -->
-				<player-column title="Wonder" type="points-science"></player-column>
+				<player-column title="Wonder" type="points"></player-column>
 			</player-columns>
 		</player-table> 
 	</md-card>
