add playertable directive

--- a/app/military/military.html
+++ b/app/military/military.html
@@ -4,9 +4,9 @@
 		<player-table players="players"> 
 			<player-columns>
 				<player-column title="Player" type="text"></player-column>
-				<!-- <player-column title="Wonder" type="points"></player-column> -->
-				<player-column title="Wonder" type="points"></player-column>
+				<player-column title="Military" type="points"></player-column>	
 			</player-columns>
+			<player-grid></player-grid>
 		</player-table> 
 	</md-card>
 </div>	
