--- a/app/players/players.html
+++ b/app/players/players.html
@@ -7,6 +7,7 @@
 					<player-column title="Player" type="text"></player-column>
 					<player-column title="Wonder" type="wonder"></player-column>
 				</player-columns>
+				<player-grid></player-grid>
 			</player-table> 
 
 			<div class="row">
