--- a/app/index.html
+++ b/app/index.html
@@ -19,28 +19,18 @@
   <!-- <script src="bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script> -->
 </head>
 <body>
-  <ul class="menu">
-    <li><a ui-sref="view1" ui-sref-active="active">view1</a></li>
-    <li><a ui-sref="view2" ui-sref-active="active">view2</a></li>
-  </ul>
-  <div class="row">
-    <div class="col s12">
-      <ul class="tabs">
-        <li class="tab col s3"><a ui-sref="players">Players</a></li>
-        <li class="tab col s3"><a ui-sref="military">Military</a></li>
-        <li class="tab col s3"><a ui-sref="treasury">Treasury</a></li>
-        <li class="tab col s3"><a ui-sref="wonder">Wonder</a></li>
-        <li class="tab col s3"><a ui-sref="civilian">Civilian</a></li>
-        <li class="tab col s3"><a ui-sref="commericial">Commercial</a></li>
-        <li class="tab col s3"><a ui-sref="guilds">Guilds</a></li>
-        <li class="tab col s3"><a ui-sref="science">Science</a></li>
-        <li class="tab col s3"><a ui-sref="results">Results</a></li>
-      </ul>
-    </div>
-  </div>
+  <!-- Menu -->
   <md-nav-bar md-selected-nav-item="currentNavItem">
   <md-nav-item md-nav-click="goto('page1')" ui-sref="players" name="page1">Players</a></md-nav-item>
-  <md-nav-item md-nav-click="goto('page1')" ui-sref="military" name="page1">Military</a></md-nav-item>
+  <md-nav-item md-nav-click="goto('page2')" ui-sref="military" name="page2">Military</a></md-nav-item>
+  <md-nav-item md-nav-click="goto('page3')" ui-sref="treasury" name="page3">Treasury</a></md-nav-item>
+  <md-nav-item md-nav-click="goto('page4')" ui-sref="wonder" name="page4">Wonder</a></md-nav-item>
+  <md-nav-item md-nav-click="goto('page5')" ui-sref="civilian" name="page5">Civilian</a></md-nav-item>
+  <md-nav-item md-nav-click="goto('page6')" ui-sref="commericial" name="page6">Commercial</a></md-nav-item>
+  <md-nav-item md-nav-click="goto('page7')" ui-sref="guilds" name="page7">Guilds</a></md-nav-item>
+  <md-nav-item md-nav-click="goto('page8')" ui-sref="science" name="page8">Science</a></md-nav-item>
+  <md-nav-item md-nav-click="goto('page9')" ui-sref="results" name="page9">Results</a></md-nav-item>
+
 
 </md-nav-bar>
   <!--[if lt IE 7]>
