--- a/app/index.html
+++ b/app/index.html
@@ -64,6 +64,7 @@
   <script src="view2/view2.js"></script>
   <script src="players/players.controller.js"></script>
   <script src="military/military.controller.js"></script>
+  <script src="treasury/treasury.controller.js"></script>
   <script src="components/version/version.js"></script>
   <script src="components/version/version-directive.js"></script>
   <script src="components/version/interpolate-filter.js"></script>
