--- a/app/index.html
+++ b/app/index.html
@@ -65,6 +65,7 @@
   <script src="players/players.controller.js"></script>
   <script src="military/military.controller.js"></script>
   <script src="treasury/treasury.controller.js"></script>
+  <script src="results/results.controller.js"></script>
   <script src="components/version/version.js"></script>
   <script src="components/version/version-directive.js"></script>
   <script src="components/version/interpolate-filter.js"></script>
