add civilian/commercial/guilds/science/wonder pages

--- a/app/guilds/guilds.html
+++ b/app/guilds/guilds.html
@@ -1,9 +1,9 @@
-<div ng-controller="MilitaryCtrl">
+<div ng-controller="GuildsCtrl">
 	<md-card>
 		<player-table players="players"> 
 			<player-columns>
 				<player-column title="player" type="text"></player-column>
-				<player-column title="military" type="points"></player-column>
+				<player-column title="guilds" type="points"></player-column>
 			</player-columns>
 			<player-grid></player-grid>
 		</player-table> 
