--- a/app/index.html
+++ b/app/index.html
@@ -26,7 +26,7 @@
   <md-nav-item md-nav-click="goto('page3')" ui-sref="treasury" name="page3">Treasury</a></md-nav-item>
   <md-nav-item md-nav-click="goto('page4')" ui-sref="wonder" name="page4">Wonder</a></md-nav-item>
   <md-nav-item md-nav-click="goto('page5')" ui-sref="civilian" name="page5">Civilian</a></md-nav-item>
-  <md-nav-item md-nav-click="goto('page6')" ui-sref="commericial" name="page6">Commercial</a></md-nav-item>
+  <md-nav-item md-nav-click="goto('page6')" ui-sref="commercial" name="page6">Commercial</a></md-nav-item>
   <md-nav-item md-nav-click="goto('page7')" ui-sref="guilds" name="page7">Guilds</a></md-nav-item>
   <md-nav-item md-nav-click="goto('page8')" ui-sref="science" name="page8">Science</a></md-nav-item>
   <md-nav-item md-nav-click="goto('page9')" ui-sref="results" name="page9">Results</a></md-nav-item>
@@ -66,6 +66,11 @@
   <script src="military/military.controller.js"></script>
   <script src="treasury/treasury.controller.js"></script>
   <script src="results/results.controller.js"></script>
+  <script src="civilian/civilian.controller.js"></script>
+  <script src="commercial/commercial.controller.js"></script>
+  <script src="guilds/guilds.controller.js"></script>
+  <script src="science/science.controller.js"></script>
+  <script src="wonder/wonder.controller.js"></script>
   <script src="components/version/version.js"></script>
   <script src="components/version/version-directive.js"></script>
   <script src="components/version/interpolate-filter.js"></script>
