--- a/app/civilian/civilian.html
+++ b/app/civilian/civilian.html
@@ -1,9 +1,9 @@
-<div ng-controller="MilitaryCtrl">
+<div ng-controller="CivilianCtrl">
 	<md-card>
 		<player-table players="players"> 
 			<player-columns>
 				<player-column title="player" type="text"></player-column>
-				<player-column title="military" type="points"></player-column>
+				<player-column title="civilian" type="points"></player-column>
 			</player-columns>
 			<player-grid></player-grid>
 		</player-table> 
