--- a/app/index.html
+++ b/app/index.html
@@ -21,15 +21,15 @@
 <body>
   <!-- Menu -->
   <md-nav-bar md-selected-nav-item="currentNavItem">
-  <md-nav-item md-nav-click="goto('page1')" ui-sref="players" name="page1">Players</a></md-nav-item>
-  <md-nav-item md-nav-click="goto('page2')" ui-sref="military" name="page2">Military</a></md-nav-item>
-  <md-nav-item md-nav-click="goto('page3')" ui-sref="treasury" name="page3">Treasury</a></md-nav-item>
-  <md-nav-item md-nav-click="goto('page4')" ui-sref="wonder" name="page4">Wonder</a></md-nav-item>
-  <md-nav-item md-nav-click="goto('page5')" ui-sref="civilian" name="page5">Civilian</a></md-nav-item>
-  <md-nav-item md-nav-click="goto('page6')" ui-sref="commercial" name="page6">Commercial</a></md-nav-item>
-  <md-nav-item md-nav-click="goto('page7')" ui-sref="guilds" name="page7">Guilds</a></md-nav-item>
-  <md-nav-item md-nav-click="goto('page8')" ui-sref="science" name="page8">Science</a></md-nav-item>
-  <md-nav-item md-nav-click="goto('page9')" ui-sref="results" name="page9">Results</a></md-nav-item>
+  <md-nav-item md-nav-click="goto('page1')" ui-sref="players" name="page1">Players</md-nav-item>
+  <md-nav-item md-nav-click="goto('page2')" ui-sref="military" name="page2">Military</md-nav-item>
+  <md-nav-item md-nav-click="goto('page3')" ui-sref="treasury" name="page3">Treasury</md-nav-item>
+  <md-nav-item md-nav-click="goto('page4')" ui-sref="wonder" name="page4">Wonder</md-nav-item>
+  <md-nav-item md-nav-click="goto('page5')" ui-sref="civilian" name="page5">Civilian</md-nav-item>
+  <md-nav-item md-nav-click="goto('page6')" ui-sref="commercial" name="page6">Commercial</md-nav-item>
+  <md-nav-item md-nav-click="goto('page7')" ui-sref="guilds" name="page7">Guilds</md-nav-item>
+  <md-nav-item md-nav-click="goto('page8')" ui-sref="science" name="page8">Science</md-nav-item>
+  <md-nav-item md-nav-click="goto('page9')" ui-sref="results" name="page9">Results</md-nav-item>
 </md-nav-bar>
   <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
