--- a/app/players/players.html
+++ b/app/players/players.html
@@ -45,6 +45,7 @@
 			    			<md-icon  md-svg-src="img/icons/sets/add.svg" aria-label="person" class="icon"></md-icon>
 			    			<span>ADD</span>
 			    		</div>
+			    		<div style="clear:both"></div>
 			    	</div>
 				</div>
 			</md-card>
