fix modal container

--- a/app/players/players.html
+++ b/app/players/players.html
@@ -17,8 +17,8 @@
 	    </md-card>
 		  <!-- Modal Structure -->
 		<script type="text/ng-template" id="dialog1.tmpl.html">
-			<md-card>
-				<div class="modal">
+			<md-card layout="row">
+				<div class="modal" flex>
 					<div>
 			    		<md-icon md-svg-src="img/icons/sets/add_person.svg" aria-label="person" class="icon"></md-icon>
 			    		<span>Add Player</span>
@@ -45,7 +45,6 @@
 			    			<md-icon  md-svg-src="img/icons/sets/add.svg" aria-label="person" class="icon"></md-icon>
 			    			<span>ADD</span>
 			    		</div>
-			    		<div style="clear:both"></div>
 			    	</div>
 				</div>
 			</md-card>
