--- a/app/players/players.html
+++ b/app/players/players.html
@@ -17,8 +17,8 @@
 	    </md-card>
 		  <!-- Modal Structure -->
 		<script type="text/ng-template" id="dialog1.tmpl.html">
-			<md-card layout="row">
-				<div class="modal" flex>
+			<md-card>
+				<div class="modal">
 					<div>
 			    		<md-icon md-svg-src="img/icons/sets/add_person.svg" aria-label="person" class="icon"></md-icon>
 			    		<span>Add Player</span>
