--- a/client/index.html
+++ b/client/index.html
@@ -51,7 +51,7 @@
   <!--  -->
   <script src="app.js"></script>
   <script src="services/game.service.js"></script>
-  <script src="app/view1/view1.js"></script>
+  <!-- <script src="app/view1/view1.js"></script> -->
   <!-- <script src="view2/view2.js"></script> -->
   <script src="app/players/players.controller.js"></script>
   <script src="app/military/military.controller.js"></script>
