--- a/client/index.html
+++ b/client/index.html
@@ -25,7 +25,7 @@
   <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
   <![endif]-->
-  <div class='title'>7 WONDERS COMPANION</div>
+  
   <div ng-include="'components/navbar/navbar.html'"></div>
   
   <div class="view-animate" ui-view></div>
@@ -62,9 +62,12 @@
   <script src="app/guilds/guilds.controller.js"></script>
   <script src="app/science/science.controller.js"></script>
   <script src="app/wonder/wonder.controller.js"></script>
+
  <!--  <script src="components/version/version.js"></script>
   <script src="components/version/version-directive.js"></script>
   <script src="components/version/interpolate-filter.js"></script> -->
   <script src="components/player-table/player-table.directive.js"></script>
+  <script src="components/navbar/navbar.controller.js"></script>
+
 </body>
 </html>
