Add multiple screen sizes

--- a/client/app/guilds/guilds.html
+++ b/client/app/guilds/guilds.html
@@ -1,5 +1,5 @@
 <div ng-controller="GuildsCtrl">
-	<md-card>
+	<md-card class="player-card">
 		<player-table players="players"> 
 			<player-columns>
 				<player-column title="player" type="text"></player-column>
