--- a/client/app/military/military.html
+++ b/client/app/military/military.html
@@ -1,6 +1,6 @@
 
 <div ng-controller="MilitaryCtrl">
-	<md-card>
+	<md-card class="player-card">
 		<player-table players="players"> 
 			<player-columns>
 				<player-column title="player" type="text"></player-column>
