--- a/client/app/players/players.html
+++ b/client/app/players/players.html
@@ -1,7 +1,7 @@
 <!-- Player View -->
 <div class="row" ng-controller="PlayersCtrl" ng-swipe-left="onSwipeLeft('military')">
 	<div class="col s12">
-	    <md-card>
+	    <md-card class="player-card">
 	   		<player-table players="players"> 
 				<player-columns>
 					<player-column title="Player" type="text"></player-column>
